[package]
name = "req"
version = "0.1.0"
authors = ["cmj <cmj@cmj.tw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
regex = "1.5.4"
serde = "1.0.126"
serde_json = "1.0.64"
stderrlog = "0.5.1"
structopt = "0.3.22"
