[package]
name = "req"
version = "0.2.0"
authors = ["cmj <cmj@cmj.tw>"]
edition = "2018"
description = "The regex-to-json utility"
keywords = ["req", "regex"]
repository = "https://github.com/cmj0121/req"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1.5.4"
serde = "1.0.126"
serde_json = "1.0.64"
stderrlog = "0.5.1"
structopt = "0.3.22"
